--- a/vscode.css
+++ b/vscode.css
@@ -77,4 +77,110 @@ div.tabs-breadcrumbs {
   color: #6d77b3;
 }
 
+/* .mtk1 {
+  color: #c1c149;
+} */
+
+
+/* Active tab neon */
+.monaco-workbench .part.editor>.content .editor-group-container>.title .tabs-container>.tab.sizing-fit.active {
+  /* box-shadow: inset 0 -5px 25px rgb(100, 50, 125); */
+  background-color: rgba(100, 50, 125, 0.5) !important;
+  /* box-shadow: inset 0 -5px 25px #fc28a825; */
+  position: relative;
+}
+
+/* Active tab stripe */
+.monaco-workbench .part.editor>.content .editor-group-container>.title .tabs-container>.tab.sizing-fit.active::after {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  height: 4px;
+  background: linear-gradient(to right, #fc28a8, #02a6f7) !important;
+  /* background: linear-gradient(to right, #fc28a8, #03edf9) !important; */
+  opacity: 1;
+  z-index: 6;
+}
+
+/* .monaco-workbench .part.editor>.content .editor-group-container>.title .tabs-container>.tab.sizing-fit::after {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  height: 0px;
+  transition: opacity 1s;
+  opacity: 0;
+  z-index: 6;
+} */
+
+
 /* ================================ */
+
+
+/* .mtk6 {
+  color: #f92aad;
+  text-shadow: 0 0 2px #100c0f, 0 0 5px #dc078e33, 0 0 10px #fff3;
+} */
+
+/* .mtk4 {
+  color: #f97e72;
+} */
+
+/* .mtk10 {
+  color: #fdfdfd;
+  text-shadow: 0 0 2px #001716, 0 0 3px #03edf975, 0 0 5px #03edf975, 0 0 8px #03edf975;
+} */
+
+/* .mtk7,.mtk9 {
+  color: #fff5f6;
+  text-shadow: 0 0 2px #000, 0 0 10px #fc1f2c75, 0 0 5px #fc1f2c75, 0 0 25px #fc1f2c75;
+} */
+
+/* .mtk11 {
+  color: #72f1b8;
+  text-shadow: 0 0 2px #100c0f, 0 0 10px #257c5575, 0 0 35px #21272475;
+}
+
+.mtk8,.mtk14 {
+  color: #f4eee4;
+  text-shadow: 0 0 2px #393a33, 0 0 8px #f39f0575, 0 0 2px #f39f0575;
+} */
+
+
+
+
+
+/* .mtk13 {
+  color: #9cdcfe;
+  text-shadow: 0 0 2px #100c0f, 0 0 5px #ffdda926, 0 0 10px #fff3;
+}
+
+.mtk12 {
+  color: #ffdda9;
+  text-shadow: 0 0 2px #100c0f, 0 0 5px #ffdda926, 0 0 10px #fff3;
+}
+
+.mtk15 {
+  color: #e67ede;
+}
+
+.mtk11  {
+  color: #4ec9b0;
+  text-shadow: 0 0 2px #100c0f, 0 0 5px #38a992, 0 0 10px #fff3;
+}
+
+.mtk5 {
+  color: #48abff;
+  text-shadow: 0 0 2px #000, 0 0 10px #48abff6b, 0 0 5px #48abff85, 0 0 25px #48abff52;
+}
+
+.mtk16 {
+  color: #c586c0;
+  letter-spacing: -0.4px;
+  font-weight: 500;
+} */
+
+
